--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
     </div>
     <div id="visual-container"></div>
 
-    <script src="scripts/visual.js"></script>
+    <script src="visual.js"></script>
 </body>
 </html>
